# toggldesktop

./: (socket_fdinfo) socketInfo = {  .gitattributes  .gitignore  .gitmodules  .mailmap  .travis.yml  AUTHORS  CMakeLists.txt  Dangerfile.swift  Gemfile  LICENSE  Makefile  README.md  TogglDesktopInstaller-x64.nsi  _config.yml  api.cc  build.ninja  clean.bat  database.cc  database.h  index.html  kopsik.cc  kopsik_api.cc  kopsik_api.h  kopsik_test.cc  kopsik_test.h  main.cc  main.h  make.bat  make_openssl.txt  params.json  rebuild.bat  releases.json  run.bat  toggl_api_client.cc  toggl_api_client.h  types.h  update_authors.sh  upload-github-release-asset.sh
next/: CMakeLists.txt  analytics.cc  analytics.h  batch_update_result.cc  batch_update_result.h  context.cc  context.h  database.cc  database.h  error.cc  error.h  event_queue.cc  event_queue.h  feedback.cc  feedback.h  formatter.cc  formatter.h  get_focused_window_linux.cc  get_focused_window_mac.cc  gui.cc  gui.h  gui_update.cc  gui_update.h  help_article.cc  https_client.cc  https_client.h  idle.cc  idle.h  main.cc  migrations.cc  migrations.h  netconf.cc  netconf.h  proxy.cc  proxy.h  pull_activity.cc  pull_activity.h  push_activity.cc  push_activity.h  rectangle.cc  (+17 more)
next/model/: autotracker.cc  autotracker.h  base_model.cc  base_model.h  client.cc  client.h  model_change.cc  model_change.h  obm_action.cc  obm_action.h  project.cc  project.h  settings.cc  settings.h  tag.cc  tag.h  task.cc  task.h  time_entry.cc  timeline_event.cc  timeline_event.h  user.cc  user.h  workspace.cc
src/: CMakeLists.txt  CustomErrorHandler.cc  CustomErrorHandler.h  Rectangle.cc  Rectangle.h  analytics.cc  analytics.h  autocomplete_item.cc  autocomplete_item.h  autotracker.cc  autotracker.h  base_model.cc  base_model.h  batch_update_result.cc  batch_update_result.h  client.cc  client.h  color_convert.cc  color_convert.h  const.h  context.cc  context.h  cpptime.h  custom_error_handler.cc  database.cc  database.h  error.cc  error.h  eventqueue.cpp  eventqueue.h  explicit_scoped_lock.cc  explicit_scoped_lock.h  feedback.cc  feedback.h  formatter.cc  formatter.h  get_focused_window.h  get_focused_window_linux.cc  get_focused_window_mac.cc  get_focused_window_windows.cc  (+97 more)
src/activities/: activity.cc  activity.h  activity_manager.cc  activity_manager.h  pull_activity.cc  pull_activity.h  push_activity.cc  push_activity.h  reminder_activity.cc  reminder_activity.h  syncer_activity.cc  syncer_activity.h  uiupdater_activity.cc  uiupdater_activity.h
src/common/: custom_error_handler.cc  custom_error_handler.h  error.cc  error.h  formatter.cc  formatter.h  json_helper.cc  model_change.h  random.cc  types.h  urls.h
src/database/: database.cc  database.h  migrations.cc  migrations.h
src/github.com/ncw/swift/: README.md  auth.go  compatibility_1_0.go  compatibility_1_1.go  doc.go  example_test.go  swift.go  swift_internal_test.go  swift_test.go  timeout_reader_test.go  watchdog_reader_test.go
src/help/: sitemap.json
src/lib/TogglDesktopDLL/TogglDesktopDLL/: ReadMe.txt  TogglDesktopDLL.vcxproj.filters  stdafx.cpp
src/lib/include/: kopsik_api.h  toggl_api.h  toggl_api_lua.h
src/lib/linux/TogglDesktopLibrary/: Makefile  TogglDesktopLibrary.pro
src/lib/osx/Kopsik/: MacOSApplicationInfo.mm  MacOSVersionChecker.mm  onboarding_service.cpp  onboarding_service.h
src/lib/osx/Kopsik.xcodeproj/: project.pbxproj
src/lib/osx/TogglDesktopLibrary.xcodeproj/: project.pbxproj
src/lib/osx/TogglTrackLibrary.xcodeproj/: project.pbxproj
src/lib/windows/TogglDesktopDLL/: TogglDesktopDLL.vcxproj  TogglDesktopDLL.vcxproj.filters
src/lib/windows/TogglDesktopDLL.Tests/: TogglDesktopDLL.Tests.vcxproj  packages.config
src/lib/windows/TogglTrackDLL/: ReadMe.txt  stdafx.cpp  (+1 more)
src/libkopsik/: README.md
src/libkopsik/TogglDesktopDLL/: TogglDesktopDLL.sln  UpgradeLog.htm
src/libkopsik/include/: kopsik_api.h
src/model/: alpha_features.cpp  alpha_features.h  autotracker.cc  autotracker.h  base_model.cc  base_model.h  batch_update_result.cc  batch_update_result.h  client.cc  client.h  obm_action.cc  obm_action.h  project.cc  project.h  settings.cc  settings.h  tag.cc  tag.h  task.cc  task.h  time_entry.cc  time_entry.h  timeline_event.cc  timeline_event.h  user.cc  user.h  workspace.cc  workspace.h
src/net/: https_client.cc  https_client.h  netconf.h  proxy.h  urls.cc  urls.h  websocket_client.cc  websocket_client.h
src/network/: https_client.cc  https_client.h  netconf.cc  netconf.h  websocket_client.cc  websocket_client.h
src/script/: find_missing_lua_interfaces.go  generate_cs_api.go  update_help_artices.go
src/ssl/: README  cacert.pem  update_certificate_bundle.sh
src/test/: CMakeLists.txt  app_test.cc  app_test.h  kopsik_api_test.cc  kopsik_api_test.h  memory_test.cc  online_test.cc  online_test.h  online_test_app.cpp  online_test_app.h  online_test_dispatcher.cc  online_test_dispatcher.h  online_test_model.cc  online_test_model.h  start_stop_test.lua  test_data.cc  test_data.h  toggl_api_client_test.cc  toggl_api_client_test.h  toggl_api_test.cc  toggl_api_test.h  ui_test.cc  ui_test.h  uitest.lua
src/timeline/: get_focused_window_mac.cc  timeline_constants.h  timeline_event.h  timeline_notifications.h  timeline_uploader.cc  timeline_uploader.h  window_change_recorder.cc  window_change_recorder.h
src/ui/cmdline/: main.cc  main.h
src/ui/common/: notifications.cc  notifications.h
src/ui/kopsik_ui_osx/: LICENSE  README.md
src/ui/linux/: README  TogglDesktop.sh  TogglTrack.sh  copy_deps.go  package.sh  qt.conf  qt_webengine.conf
src/ui/osx/: Dangerfile.swift  Gemfile  Podfile
src/ui/windows/: TogglDesktopInstaller-x64.nsi  TogglDesktopInstaller-x86.nsi  build_openssl.bat
src/util/: custom_error_handler.cc  custom_error_handler.h  error.cc  error.h  formatter.cc  formatter.h  get_focused_window_linux.cc  get_focused_window_windows.cc  json.cc  json.h  logger.h  memory.cc  memory.h  memory_impl.h  property.cc  property.h  random.cc  random.h  rectangle.cc  rectangle.h  string_tools.cpp  string_tools.h  timer.cc  timer.h  types.h
(+2877 files in other folders)
